<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_green"
    tools:context=".SplashScreenActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="@dimen/_30sdp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/plantLottie"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="plant.json"
            app:lottie_loop="false" />

        <LinearLayout
            android:id="@+id/tagLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plantLottie"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/p"
                android:textColor="@color/lightest_green"
                android:textSize="@dimen/_24ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/lantina"
                android:textColor="@color/white"
                android:textSize="@dimen/_24ssp" />


        </LinearLayout>

        <View
            android:id="@+id/borderView"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_below="@+id/tagLine"
            android:layout_centerHorizontal="true"
            android:background="@color/lightest_green" />

        <TextView
            android:id="@+id/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/borderView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/tagline"
            android:textColor="@color/white"
            android:textSize="@dimen/_15ssp" />

    </RelativeLayout>


</RelativeLayout>