<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:clipToPadding="false"
    android:orientation="vertical"
    tools:context=".PlantDetectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/plantTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nunito_sans_semibold"
            android:padding="@dimen/_10sdp"
            android:text="@string/plant_detection"
            android:textColor="@color/lighter_green"
            android:textSize="@dimen/_20ssp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/picCv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:layout_below="@+id/plantTag"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            app:cardCornerRadius="@dimen/_5sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/imageScanLottie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation=".2dp"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="scan.json"
                    app:lottie_loop="true" />

                <ImageView
                    android:id="@+id/imageIv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:id="@+id/plantLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picCv"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/result"
                android:gravity="start|top"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:id="@+id/plantTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp" />


        </LinearLayout>


        <TextView
            android:id="@+id/startTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/plantLl"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/green_box_custom"
            android:elevation="@dimen/_5sdp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/click_to_find_out"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp" />

    </RelativeLayout>


</ScrollView>